# conda-package-testing

./: .gitignore  README.md  run_test_suite_on_machines.sh
machines/boxcutter/fedora21/: Vagrantfile
machines/joshbeard/scientific-6.6-64/: Vagrantfile
machines/smak/archlinux/: Vagrantfile
machines/ubuntu/precise64/: Vagrantfile
machines/ubuntu/trusty64/: Vagrantfile
machines/ubuntu/vivid64/: Vagrantfile
test_suite/: run_test_suite.sh
test_suite/hdf5/: CMakeLists.txt  create_inputs.sh  main.cxx  mpialgebra.cxx  mpialgebra.hxx  run_test.sh
test_suite/metis-gkrand/: main.c  run_test.sh
test_suite/mumps/: run_test.sh
test_suite/openmpi/: compute_pi.c  compute_pi.h  main.c  run_test.sh
test_suite/parmetis/: run_test.sh
test_suite/scalapack/: pdpttr_2.f90  run_test.sh
test_suite/superlu_dist/: run_test.sh
